--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Your Website</title>
+	<title>Mito</title>
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 	<header>
 		<nav>
 			<ul>
-				<li>Your menu</li>
+				<li>Maxi Soy YO 123</li>
 			</ul>
 		</nav>
 	</header>
